# mood-tracker

./: .env.example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/docs/: SPEC.md
backend/src/: __main__.py
backend/src/domain/entities/: user.py
backend/src/domain/repositories/: user_repository.py
backend/src/domain/value_objects/: user.py  user_id.py
backend/src/mood_tracker/: app_factory.py  config.py  main.py
backend/src/mood_tracker/application/: exceptions.py
backend/src/mood_tracker/application/auth/dto/: login_user.py  refresh_user.py  register_user.py
backend/src/mood_tracker/application/auth/use_cases/: login_user.py  refresh_user.py  register_user.py
backend/src/mood_tracker/application/dto/: register_user.py
backend/src/mood_tracker/application/use_cases/: __init__.py  login_user.py  logout_all_user.py  logout_user.py  refresh_user.py  register_user.py
backend/src/mood_tracker/contexts/auth/application/use_cases/: register_user.py
backend/src/mood_tracker/contexts/auth/domain/: exceptions.py
backend/src/mood_tracker/contexts/auth/domain/entities/: user.py
backend/src/mood_tracker/contexts/auth/domain/repositories/: token_repository.py  user_repository.py
backend/src/mood_tracker/contexts/auth/domain/security/: token_service.py
backend/src/mood_tracker/contexts/auth/infrastructure/security/: password_hasher.py  token_repository.py  token_service.py
backend/src/mood_tracker/domain/: exceptions.py
backend/src/mood_tracker/domain/auth/entities/: user.py
backend/src/mood_tracker/domain/auth/repositories/: token_repository.py  user_repository.py
backend/src/mood_tracker/domain/auth/security/: token_service.py
backend/src/mood_tracker/domain/auth/value_objects/: password_hash.py  user_email.py  user_id.py
backend/src/mood_tracker/domain/entities/: user.py
backend/src/mood_tracker/domain/repositories/: token_repository.py  user_repository.py
backend/src/mood_tracker/domain/security/: password_hasher.py  token_service.py
backend/src/mood_tracker/domain/value_objects/: __init__.py  hash_password.py  token_pair.py  user_email.py  user_name.py
backend/src/mood_tracker/infrastructure/: exceptions.py  logging.py
backend/src/mood_tracker/infrastructure/persistence/: models.py  session.py
backend/src/mood_tracker/infrastructure/persistence/repositories/: user_repository.py
backend/src/mood_tracker/infrastructure/security/: __init__.py  password_hasher.py  token_repository.py  token_service.py
backend/src/mood_tracker/presentation/api/: __init__.py  cookie_service.py  exception_handlers.py
backend/src/mood_tracker/presentation/api/auth/: __init__.py
backend/src/mood_tracker/presentation/api/middleware/: logging_middleware.py  setup.py
backend/src/mood_tracker/presentation/api/routers/: setup.py
backend/src/mood_tracker/presentation/api/schemas/: auth.py
backend/src/mood_tracker/presentation/dependencies/: container.py  setup.py
backend/src/mood_tracker/presentation/dependencies/providers/: __init__.py  auth_use_cases.py  cookie_service.py  db_provider.py  password_hasher.py  redis_provider.py  token_provider.py
backend/src/tests/domain/: test_user.py  test_user_email.py  test_user_id.py
backend/src/tests/domain/auth/: test_user.py  test_user_email.py  test_user_id.py
init-db/: 01-create-tables.sql
(+17 files in other folders)
