[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true
explicit_package_bases = true
mypy_path = ["src"] 
plugins = ['pydantic.mypy']