[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "dishka>=1.8.0",
    "fastapi>=0.135.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "redis>=7.2.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true
explicit_package_bases = true
mypy_path = ["src"] 
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = [
    "ERA",   # eradicate
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self 
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TD",    # flake8-todos
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "I",     # isort
    "C90",   # mccabe    
    "N",     # pep8-naming
    "PERF",  # perflint
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "UP",    # pyupgrade
    "FURB",  # refurb
    "RUF",   # ruff
    "TRY",   # tryceratops
]
ignore = [
    "COM812", # ruff warn on it
    "S101",   # triggers on asserts in tests
    "TRY003", # imho  adding factories to some exceptions is too much
]
